Fri Oct  4 19:54:09 2013  Zachary Scott  <e@zzak.io>

	* ext/dbm/dbm.c: [DOC] Fix wrong constant name in DBM by @edward
	  [Fixes GH-409] https://github.com/ruby/ruby/pull/409

Fri Oct  4 19:49:42 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c: rename heap.free_num as heap.swept_num to clarify meaning and
	  avoid confusion with objspace_free_num().

Fri Oct  4 19:02:01 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (objspace_free_num): new method for available/free slots on
	  heap. [ruby-core:57633] [Bug #8983]
	* gc.c (gc_stat): change heap_free_num definition to use new method.
	* test/ruby/test_gc.rb: test for above.

Fri Oct  4 18:53:42 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c: add rb_objspace.limit to keep accurate count of total heap
	  slots [ruby-core:57633] [Bug #8983]

Fri Oct  4 09:32:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/csv.rb (CSV.foreach): support enumerator.  based on a patch by
	  Hanmac (Hans Mackowiak) at [ruby-core:57643].  [ruby-core:57283]
	  [Feature #8929]

Thu Oct  3 18:20:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (console_emulator_p, constat_handle): disable built-in
	  console colorizing when console-emulator-like DLL is injected.
	  [Feature #8201]

Thu Oct  3 18:01:44 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: define gc_profile_record::allocated_size if
	  CALC_EXACT_MALLOC_SIZE is true.

Thu Oct  3 13:42:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (yes-test-sample): use RUNRUBY instead of MINIRUBY to set
	  runtime library path and run the built ruby.  [Bug #8971]

Thu Oct  3 00:17:15 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-additional.el: Properly quote the body.  An unquoted
	  body given to eval-after-load is evaluated immediately!

Wed Oct  2 21:38:30 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/socket/ifaddr.c (rsock_getifaddrs): fix possible memory leak.
	  When a system had no interface, this function used xmalloc for root