@@ -1,3 +1,8 @@
+Sat Oct  5 11:20:24 2013  Aaron Pfeifer  <aaron.pfeifer@gmail.com>
+
+	* thread.c (terminate_atfork_i): fix locking mutexes not unlocked in
+	  forks when not tracked in thread.  [ruby-core:55102] [Bug #8433]
+
 Fri Oct  4 19:54:09 2013  Zachary Scott  <e@zzak.io>
 
 	* ext/dbm/dbm.c: [DOC] Fix wrong constant name in DBM by @edward
